# templates

cmake/: CMakeLists.txt
latex/: ranjanashish-beamer.tex
